[gd_scene load_steps=12 format=3 uid="uid://ddex27heo0a1s"]

[ext_resource type="Texture2D" uid="uid://dowr0l8ivt006" path="res://asset_packs/brackeys_platformer_assets/sprites/slime_green.png" id="1_o47px"]
[ext_resource type="Script" path="res://scripts/entities/enemy/slime.gd" id="1_vutvo"]
[ext_resource type="Resource" uid="uid://cccmb5ymc5f2j" path="res://scenes/entities/enemy/slime_modifiers.tres" id="2_68i4v"]
[ext_resource type="Script" path="res://scripts/entities/damage_area.gd" id="3_1nf40"]
[ext_resource type="PackedScene" uid="uid://crmqcv4jar070" path="res://scenes/entities/health.tscn" id="5_kb6ee"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x1gbo"]
atlas = ExtResource("1_o47px")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql407"]
atlas = ExtResource("1_o47px")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_svlrc"]
atlas = ExtResource("1_o47px")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hu4s"]
atlas = ExtResource("1_o47px")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_t68dm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1gbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql407")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svlrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hu4s")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs2w1"]
size = Vector2(10, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_vutvo")
enemy_stats = ExtResource("2_68i4v")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t68dm")
autoplay = "default"
frame_progress = 0.495837

[node name="HitboxArea" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("3_1nf40")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_fs2w1")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-9, 0)

[node name="Health" parent="." instance=ExtResource("5_kb6ee")]
position = Vector2(1100.43, 231.481)
entity_stats = ExtResource("2_68i4v")
